# huggingface-datasets_COCOA

./: .gitignore  COCOA.py  README.md  pyproject.toml
.github/workflows/: ci.yaml  push_to_hub.yaml
notebooks/: COCOA_demo.ipynb  draft_cocoa_examples.ipynb
tests/: COCOA_test.py
